# server_obstruction

./: .claudeignore  .dockerignore  .env.example  .gcloudignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  build_scw.sh  imagebuild.yaml  log.txt  pyproject.toml  pytest.ini  requirements-prod.txt  requirements.txt  test_routes.py  test_viz.py
.github/: README.md
.github/workflows/: changelog.yml  release.yml  tests.yml
deployment/: .env.docker  .env.docker.debug  .env.production  .env.production.debug  README.md  deploy-docker.sh  deploy-vm.sh  deploy.sh  docker-compose.yml  nginx-docker.conf  nginx-obstruction-server.conf  obstruction-server.service
docs/: architecture_diagram.drawio  classes_ServerObstruction.puml  coordinate_system_and_calculations.md  parallel_multi_direction_implementation.md
example/: coordinate_converter.py  demo.ipynb  dev.ipynb  obstruction_visualizer.py  parallel_request_example.py  sample_constructions.py  viz_utils.py
src/: main.py
src/components/: constants.py  direction_calculator.py  filter_strategies.py  geometry.py  horizon_intersection.py  intersection_point.py  obstruction_calculator.py  obstruction_models.py  plane_intersection.py  projection.py  raytracing_models.py  triangle_filter.py  triangle_processing.py  validators.py  vertical_plane.py  zenith_intersection.py
src/components/calculators/: __init__.py  (+22 more)
src/server/: application.py  builders.py  decorators.py  enums.py  launcher.py  maps.py  openapi.py  schemas.py
src/utils/: settings.py  standard_map.py
tests/server/: test_application.py  test_launcher.py
(+101 files in other folders)
